--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+@layer utilities {
+    @variants responsive {
+        .masonry {
+            column-count: 2;
+            column-gap: 1.5em;
+        }
+        .break-inside {
+            break-inside: avoid;
+        }
+    }
+}
